build_err.txt
[1/4] Linking CXX static library lib\libengine.a
[2/4] Building CXX object game_demo/CMakeFiles/game_demo.dir/src/Entities/Player.cpp.obj
FAILED: [code=1] game_demo/CMakeFiles/game_demo.dir/src/Entities/Player.cpp.obj 
C:\msys64\mingw64\bin\g++.exe  -IE:/projects/top-down-game-engine-ai/game_demo/src -IE:/projects/top-down-game-engine-ai/engine/include -IE:/projects/top-down-game-engine-ai/third_party -g -std=c++17 -Wall -Wextra -Wpedantic -MD -MT game_demo/CMakeFiles/game_demo.dir/src/Entities/Player.cpp.obj -MF game_demo\CMakeFiles\game_demo.dir\src\Entities\Player.cpp.obj.d -o game_demo/CMakeFiles/game_demo.dir/src/Entities/Player.cpp.obj -c E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp
In file included from E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Entity.hpp:2,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp:2,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:1:
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::onAttach(engine::Entity&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:13:35: warning: unused parameter 'owner' [-Wunused-parameter]
   13 |     virtual void onAttach(Entity& owner) {}
      |                           ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::update(engine::Entity&, engine::GameEngine&, float)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:33: warning: unused parameter 'owner' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                         ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:52: warning: unused parameter 'engine' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                        ~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:66: warning: unused parameter 'dt' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                                            ~~~~~~^~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp: At global scope:
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp:34:9: error: 'CircleShape' in namespace 'sf' does not name a type
   34 |     sf::CircleShape m_shadow;
      |         ^~~~~~~~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp:35:9: error: 'CircleShape' in namespace 'sf' does not name a type
   35 |     sf::CircleShape m_glow;
      |         ^~~~~~~~~~~
In file included from E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/SceneManager.hpp:2,
                 from E:/projects/top-down-game-engine-ai/engine/include/engine/Core/GameEngine.hpp:4,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:3:
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp: In member function 'virtual void engine::IScene::handleEvent(engine::GameEngine&, const sf::Event&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:50: warning: unused parameter 'engine' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                              ~~~~~~~~~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:75: warning: unused parameter 'event' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                                                          ~~~~~~~~~~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp: In constructor 'Player::Player()':
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:34:5: error: 'm_shadow' was not declared in this scope
   34 |     m_shadow.setRadius(16.f);
      |     ^~~~~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:39:5: error: 'm_glow' was not declared in this scope
   39 |     m_glow.setRadius(64.f);
      |     ^~~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp: In member function 'virtual void Player::render(sf::RenderWindow&)':
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:166:5: error: 'm_shadow' was not declared in this scope
  166 |     m_shadow.setPosition({pos.x, pos.y + 16.f});
      |     ^~~~~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.cpp:167:5: error: 'm_glow' was not declared in this scope
  167 |     m_glow.setPosition(pos);
      |     ^~~~~~
[3/4] Building CXX object game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj
FAILED: [code=1] game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj 
C:\msys64\mingw64\bin\g++.exe  -IE:/projects/top-down-game-engine-ai/game_demo/src -IE:/projects/top-down-game-engine-ai/engine/include -IE:/projects/top-down-game-engine-ai/third_party -g -std=c++17 -Wall -Wextra -Wpedantic -MD -MT game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj -MF game_demo\CMakeFiles\game_demo.dir\src\Scenes\GameScene.cpp.obj.d -o game_demo/CMakeFiles/game_demo.dir/src/Scenes/GameScene.cpp.obj -c E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp
In file included from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.hpp:2,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp:1:
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp: In member function 'virtual void engine::IScene::handleEvent(engine::GameEngine&, const sf::Event&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:50: warning: unused parameter 'engine' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                              ~~~~~~~~~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Scene/IScene.hpp:17:75: warning: unused parameter 'event' [-Wunused-parameter]
   17 |     virtual void handleEvent(engine::GameEngine& engine, const sf::Event& event) {}
      |                                                          ~~~~~~~~~~~~~~~~~^~~~~
In file included from E:/projects/top-down-game-engine-ai/engine/include/engine/Components/VelocityComponent.hpp:2,
                 from E:/projects/top-down-game-engine-ai/engine/include/engine/Collision/CollisionSystem.hpp:3,
                 from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.hpp:5:
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::onAttach(engine::Entity&)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:13:35: warning: unused parameter 'owner' [-Wunused-parameter]
   13 |     virtual void onAttach(Entity& owner) {}
      |                           ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp: In member function 'virtual void engine::Component::update(engine::Entity&, engine::GameEngine&, float)':
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:33: warning: unused parameter 'owner' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                         ~~~~~~~~^~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:52: warning: unused parameter 'engine' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                        ~~~~~~~~~~~~^~~~~~
E:/projects/top-down-game-engine-ai/engine/include/engine/Entity/Component.hpp:14:66: warning: unused parameter 'dt' [-Wunused-parameter]
   14 |     virtual void update(Entity& owner, GameEngine& engine, float dt) {}
      |                                                            ~~~~~~^~
In file included from E:/projects/top-down-game-engine-ai/game_demo/src/Scenes/GameScene.cpp:2:
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp: At global scope:
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp:34:9: error: 'CircleShape' in namespace 'sf' does not name a type
   34 |     sf::CircleShape m_shadow;
      |         ^~~~~~~~~~~
E:/projects/top-down-game-engine-ai/game_demo/src/Entities/Player.hpp:35:9: error: 'CircleShape' in namespace 'sf' does not name a type
   35 |     sf::CircleShape m_glow;
      |         ^~~~~~~~~~~
ninja: build stopped: subcommand failed.
